--- a/.github/workflows/integration-misc-3-cron.yaml
+++ b/.github/workflows/integration-misc-3-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-10-23T17:20:56Z by kres 6d3cad4.
+# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
 
 name: integration-misc-3-cron
 concurrency:
@@ -99,5 +99,7 @@ jobs:
           name: talos-logs-integration-misc-3
           path: |-
             ~/.talos/clusters/**/*.log
+            ~/.talos/clusters/**/support.zip
+            /tmp/support-*.zip
             !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
