--- a/.github/workflows/integration-provision-0-cron.yaml
+++ b/.github/workflows/integration-provision-0-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-10-18T16:27:22Z by kres 34e72ac.
+# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
 
 name: integration-provision-0-cron
 concurrency:
@@ -94,5 +94,7 @@ jobs:
           name: talos-logs-integration-provision-0
           path: |-
             ~/.talos/clusters/**/*.log
+            ~/.talos/clusters/**/support.zip
+            /tmp/support-*.zip
             !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
