--- a/.github/workflows/integration-qemu-cron.yaml
+++ b/.github/workflows/integration-qemu-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-10-16T13:22:04Z by kres 34e72ac.
+# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
 
 name: integration-qemu-cron
 concurrency:
@@ -95,5 +95,7 @@ jobs:
           name: talos-logs-integration-qemu
           path: |-
             ~/.talos/clusters/**/*.log
+            ~/.talos/clusters/**/support.zip
+            /tmp/support-*.zip
             !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
