--- a/.github/workflows/integration-qemu-encrypted-vip-cron.yaml
+++ b/.github/workflows/integration-qemu-encrypted-vip-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-20T17:49:19Z by kres 8be5fa7.
+# Generated on 2024-11-08T11:46:41Z by kres 1fc767a.
 
 name: integration-qemu-encrypted-vip-cron
 concurrency:
@@ -97,5 +97,7 @@ jobs:
           name: talos-logs-integration-qemu-encrypted-vip
           path: |-
             ~/.talos/clusters/**/*.log
+            ~/.talos/clusters/**/support.zip
+            /tmp/support-*.zip
             !~/.talos/clusters/**/swtpm.log
           retention-days: "5"
