--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/overrides-controlplane.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/overrides-controlplane.yaml
@@ -27,6 +27,7 @@ machine:
             - foo=bar
             - bar=baz
         wipe: false
+        grubUseUKICmdline: true
     sysctls:
         foo: bar
     registries:
