--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/base-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.12/base-worker.yaml
@@ -15,6 +15,7 @@ machine:
     network: {}
     install:
         wipe: false
+        grubUseUKICmdline: true
     features:
         diskQuotaSupport: true
         kubePrism:
